# electronic-control-unit

./: LICENSE  README.md
DigitalGauge/: CMakeLists.txt  DigitalGauge.cpp  GC9A01.cpp  GC9A01.h  README.md
ECU/: .gitignore  CMakeLists.txt  LICENSE  README.md
ECU/src/: DigitalGauge.h  Speedometer.cpp  Speedometer.h  config.ini
ECU/src/assets/HolleySniper/: Sniper_V2.dbc  Sniper_V2.json
ECU/src/assets/images/: digital_gauge_pattern2.xcf
ECU/src/assets/src/: circle-dotted-line-260nw-723018148.xcf  digital_gauge.cpp  digital_gauge_pattern.xcf
ECU/src/core/: Base.cpp  DBCParser.cpp  Process.cpp  Process.h  SoftwareI2C.cpp  System.cpp
ECU/src/hardware/: Button.cpp  DHT11.h  DS18B20.cpp  DS18B20.h  DS3231.cpp  GPS.h  MCP2515.h  OF05ZAT.cpp  OF05ZAT.h  RELAY.cpp  SSD1306Hardware.cpp  SSD1306Software.h  STEPPER.cpp
ECU/src/helpers/: signalHandler.cpp
ECU/src/lib/LCD_display/Fonts/: LiberationSansNarrow_Bold16.cpp  LiberationSansNarrow_Bold30.cpp
ECU/src/lib/LCD_display/GUI/: GUI_BMP.h  GUI_Paint.h
ECU/tools/: raspberry_config.sh  setup_dhcp_server.sh
Raspberry/: CMakeLists.txt  DigitalGauge.cpp  DigitalGauge.h  Makefile  RoundDisplay.cpp  RoundDisplay.h  Terminate child process C.html  config.ini  main.cpp  main.h  setup.sh
Raspberry/assets/chars/: char_0.cpp  char_1.cpp  char_2.cpp  char_3.cpp  char_4.cpp  char_5.cpp  char_6.cpp  char_7.cpp  char_8.cpp  char_9.cpp  char_A.cpp  char_B.cpp  char_C.cpp  char_D.cpp  char_E.cpp  char_F.cpp  char_G.cpp  char_H.cpp  char_I.cpp  char_J.cpp  char_K.cpp  char_L.cpp  char_M.cpp  char_N.cpp  char_O.cpp  char_P.cpp  char_Q.cpp  char_R.cpp  char_S.cpp  char_T.cpp  char_U.cpp  char_V.cpp  char_W.cpp  char_X.cpp  char_Y.cpp  char_Z.cpp  char_a.cpp  char_b.cpp  char_c.cpp  char_d.cpp  (+40 more)
Raspberry/assets/images/: digital_gauge.xcf  digital_gauge_pattern2.cpp  icon_to_byte_array.py
Raspberry/assets/numbers/: dot_big.cpp  icon_to_byte_array.py  number0_big.cpp  number1_big.cpp  number2_big.cpp  number3_big.cpp  number4_big.cpp  number5_big.cpp  number6_big.cpp  number7_big.cpp  number8_big.cpp  number9_big.cpp  numbers.h
Raspberry/assets/src/: digital_gauge.xcf  torino_logo.cpp  torino_tsx_logo.cpp
Raspberry/helpers/: bitmap.py  determineType.cpp  helpers.h  signal_handler.cpp  temperature_gauge_icon.cpp  temperature_gauge_icon.h  trimLine.cpp
Raspberry/includes/: Ads1115.cpp  Ads1115.h  AnalogConverter.cpp  AnalogConverter.h  CircularDisplay.cpp  CircularDisplay.h  Common.h  CoolantTempSensor.cpp  CoolantTempSensor.h  FlowSensor.cpp  FlowSensor.h  Logger.cpp  Logger.h  Relay.h  System.cpp  System.h  TempGauge.cpp  TempGauge.h
Raspberry/lib/LCD_display/: LCD_display.h
Raspberry/lib/LCD_display/Config/: DEV_Config.c  dev_hardware_SPI.c  dev_hardware_SPI.h
Raspberry/lib/LCD_display/Examples/: LCD_1in28_test.c
Raspberry/lib/LCD_display/Fonts/: LiberationSansNarrow_Bold24.c  LiberationSansNarrow_Bold36.c  LiberationSansNarrow_Bold48.c  LiberationSansNarrow_Bold54.c  LiberationSansNarrow_Bold60.c  LiberationSansNarrow_Bold80.c  font_to_image.py  fonts.h
Raspberry/lib/LCD_display/GUI/: GUI_BMP.c  GUI_Paint.c
Raspberry/lib/LCD_display/LCD/: LCD_0in96.c  LCD_1in3.c
Raspberry/lib/Stepper/: Stepper.cpp  Stepper.h
Raspberry/lib/display/examples/: LCD_0in96_test.c  LCD_1in14_test.c  LCD_1in28_test.c  LCD_1in3_test.c  LCD_1in54_test.c  LCD_1in8_test.c  LCD_2in4_test.c  LCD_2in_test.c  LCD_init_logo.c  display.h
Raspberry/lib/display/lib/Config/: dev_hardware_SPI.c
Raspberry/src/: DigitalGauge.cpp  DigitalGauge.h  RoundDisplay.cpp  RoundDisplay.h  Speedometer.cpp  Speedometer.h  TempGauge.cpp  TempGauge.h  common.h  config.ini  main.cpp  main.h
Raspberry/src/assets/images/: images.h
Raspberry/src/assets/src/: digital_gauge_pattern.cpp
Raspberry/src/core/: BCM_2835.cpp  BCM_2835.h  Base.h  Config.cpp  DBCParser.cpp  DBCParser.h  FuelConsumption.cpp  FuelConsumption.h  Gauge.cpp  Gauge.h  Process.h  SoftwareI2C.h  System.cpp  System.h  common.h
Raspberry/src/hardware/: ADS1115.cpp  ADS1115.h  DHT11.cpp  DHT11.h  DS3231.cpp  DS3231.h  MCP2515.cpp  MCP2525.h  OF05ZAT.cpp  OF05ZAT.h  RELAY.h  SSD1306.cpp  SSD1306.h  SSD1306Hardware.cpp  SSD1306Hardware.h  SSD1306Software.cpp  STEPPER.h  SpeedSensor.cpp  SpeedSensor.h  TCA9548A.cpp  TCA9548A.h  VoltSensor.cpp  VoltSensor.h
Raspberry/src/helpers/: childProcessTerminator.cpp  createSharedMemory.cpp  getProgramName.cpp  helpers.h  terminateChildProcesses.cpp
Raspberry/src/includes/: AnalogConverter.cpp  AnalogConverter.h  BCM2835Manager.h  Button.cpp  Button.h  Common.h  Config.h  CoolantTempSensor.h  FlowSensor.cpp  FlowSensor.h  GPS.h  Gauge.cpp  Gauge.h  I2CMultiplexer.cpp  I2CMultiplexer.h  Logger.cpp  Logger.h  Process.cpp  Process.h  Relay.cpp  Relay.h  SpeedSensor.cpp  SpeedSensor.h  System.cpp  System.h  TempGauge.cpp  TempGauge.h  TempSensor.cpp  TempSensor.h  VoltSensor.cpp  VoltSensor.h
Raspberry/src/lib/ADS1115/: ADS1115.cpp  ADS1115.h
Raspberry/src/lib/GPS/: GPS.cpp  GPS.h
Raspberry/src/lib/LCD_display/: LCD_display.h
Raspberry/src/lib/LCD_display/Config/: DEV_Config.c  DEV_Config.cpp  DEV_Config.h
Raspberry/src/lib/LCD_display/Fonts/: LiberationSansNarrow_Bold54.cpp  LiberationSansNarrow_Bold60.c  fonts.h
Raspberry/src/lib/LCD_display/GUI/: GUI_BMP.c  GUI_BMP.cpp  GUI_Paint.h
Raspberry/src/lib/SSD1306/: SSD1306.cpp  SSD1306.h
Raspberry/src/lib/Stepper/: Stepper.cpp  Stepper.h
Raspberry/tools/: convert_dbc_to_json.sh  copy_ssh_key_to_rasp.sh  rename_c_to_cpp.sh  set_static_ip_address.sh  upload_to_rasp.sh
Raspberry_Pi_Pico_2/: Button.cpp  CMakeLists.txt  FlashStorage.h  GPS.cpp  GPS.h  Gauge.cpp  Gauge.h  Raspberry_Pi_Pico_2.cpp  SSD1306.cpp  SSD1306.h  SpeedSensor.cpp  SpeedSensor.h  Speedometer.cpp  Speedometer.h  Stepper.cpp  Stepper.h  fonts.h
Speedometer/: Button.h  CMakeLists.txt  Common.h  FlashStorage.cpp  GPS.cpp  GPS.h  Gauge.h  LiberationSansNarrow_Bold28.cpp  README.md  SSD1306.cpp  SpeedSensor.cpp  SpeedSensor.h  Speedometer.cpp  Speedometer.h
tools/: font_to_image.py  image_to_byte_array.py  set_static_ip_address.sh
(+71 files in other folders)
